--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -50,4 +50,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"/>
 
+    <TextView
+        android:id="@+id/itemNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"/>
+
+
+
 </LinearLayout>
