--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -199,4 +199,32 @@
         <item>30.0</item>
     </string-array>
 
+    <string-array name="player_number">
+        <item>1</item>
+        <item>35</item>
+        <item>33</item>
+        <item>4</item>
+        <item>3</item>
+        <item>25</item>
+        <item>39</item>
+        <item>5</item>
+        <item>42</item>
+        <item>2</item>
+        <item>26</item>
+        <item>23</item>
+        <item>8</item>
+        <item>20</item>
+        <item>13</item>
+        <item>38</item>
+        <item>10</item>
+        <item>7</item>
+        <item>27</item>
+        <item>43</item>
+        <item>21</item>
+        <item>16</item>
+        <item>37</item>
+        <item>9</item>
+        <item>14</item>
+    </string-array>
+
 </resources>
