--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -19,6 +19,20 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true">
 
+            <TextView
+                android:id="@+id/itemNumber"
+                android:backgroundTint="@color/cyan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:textAlignment="center"
+                android:minWidth="50dp"
+                android:paddingRight="8dp"
+                android:textSize="38sp"
+                android:textStyle="bold"
+                android:text="10" />
+
             <ImageView
                 android:id="@+id/itemImage"
                 android:layout_width="60dp"
@@ -45,18 +59,5 @@
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/itemNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:paddingRight="8dp"
-            android:textSize="38sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/white"
-            android:text="10" />
-
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
