--- a/app/src/main/res/layout/item_card_layout.xml
+++ b/app/src/main/res/layout/item_card_layout.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -19,26 +18,15 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true">
 
-            <TextView
-                android:id="@+id/itemNumber"
-                android:backgroundTint="@color/cyan"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:textAlignment="center"
-                android:minWidth="50dp"
-                android:paddingRight="8dp"
-                android:textSize="38sp"
-                android:textStyle="bold"
-                />
-
             <ImageView
                 android:id="@+id/itemImage"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginEnd="16dp"
-                android:contentDescription="@string/item_image" />
+                android:contentDescription="@string/item_image"
+                android:src="@drawable/nuri_sahin"
+
+                />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -50,13 +38,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:text="Nuri Sahin"/>
 
                 <TextView
                     android:id="@+id/itemDescription"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:text="Manager"/>
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
