--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,11 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.UtsPmo" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:fontFamily">@font/poppins</item>
+        <item name="colorPrimary">#000000</item>
+        <item name="colorOnPrimary">#000000</item>
+        <item name="colorPrimaryDark">#BDBDBD</item>
+        <item name="colorAccent">#FF5722</item>
     </style>
 
     <style name="Theme.UtsPmo" parent="Base.Theme.UtsPmo" />
