--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Borussia Dortmund Squad List 24/25"
+        android:text="@string/title2"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_margin="8dp"
@@ -26,7 +26,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Position:"
             android:textSize="16sp"
             android:layout_gravity="center_vertical"
             android:paddingEnd="8dp"/>
