--- a/app/src/main/res/layout/manager_layout.xml
+++ b/app/src/main/res/layout/manager_layout.xml
@@ -28,7 +28,7 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_gravity="center"
-                android:contentDescription="@string/item_image" />
+                android:src="@drawable/nuri_sahin" />
 
             <!-- Nama pemain -->
             <TextView
@@ -38,49 +38,56 @@
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:fontFamily="@font/poppins"
-                android:layout_marginTop="16dp" />
+                android:layout_marginTop="16dp"
+                android:text="@string/manager_name" />
 
             <!-- Posisi pemain -->
             <TextView
                 android:id="@+id/detailPosition"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp" />
+                android:layout_marginTop="8dp"
+                android:text="@string/manager" />
 
             <!-- Kebangsaan pemain -->
             <TextView
                 android:id="@+id/detailNationality"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp" />
+                android:layout_marginTop="8dp"
+                android:text="@string/nationality_turkiye"/>
 
             <!-- Tanggal lahir dan umur pemain -->
             <TextView
                 android:id="@+id/detailBirthDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp" />
+                android:layout_marginTop="8dp"
+                android:text="@string/birth_date_1988_9_5_36_years_old"/>
 
             <!-- Tinggi pemain -->
             <TextView
                 android:id="@+id/detailHeight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp" />
+                android:layout_marginTop="8dp"
+                android:text="@string/preferred_formation_4_2_3_1"/>
 
             <!-- Nilai pasar pemain -->
             <TextView
                 android:id="@+id/detailMarketValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp" />
+                android:layout_marginTop="8dp"
+                android:text="@string/coaching_licence_uefa_a_licence" />
 
             <!-- Nomor pemain -->
             <TextView
                 android:id="@+id/itemNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp" />
+                android:layout_marginTop="8dp"
+                android:text="@string/avg_term_as_coach_1_31_years" />
 
         </LinearLayout>
     </ScrollView>
