--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,9 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.UtsPmo" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="android:fontFamily">@font/poppins</item>
+        <item name="colorPrimary">#000000</item>
+        <item name="colorPrimaryDark">#212121</item>
+        <item name="colorAccent">#FF5722</item>
     </style>
 </resources>
